# cpp-libpq-pool

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: main.cxx
src/pqpool/: connection.cxx  connection.h  deleter.cxx  deleter.h  pool.cxx  pool.h
